fixing spacing with missing user photo

--- a/scss/custom/projects.scss
+++ b/scss/custom/projects.scss
@@ -264,7 +264,7 @@ $body-font-size-small-screen: rem-calc(15);
         .user-info {
           @include grid-row($behavior: nest);
 
-          .user-photo img{
+          .user-photo a{
             @include grid-column($columns:4);
           }
           .user-details {
